--- a/infrastucture/azure-pipelines-remove-infra.yml
+++ b/infrastucture/azure-pipelines-remove-infra.yml
@@ -33,4 +33,4 @@ stages:
           scriptType: bash
           scriptLocation: inlineScript
           inlineScript: |
-            az group delete --name $(RESOURCEGROUP_NAME) --force-deletion-types --no-wait --yes
+            az group delete --name $(RESOURCEGROUP_NAME) --no-wait --yes
