disable ci triggers for cleanup pipeline

--- a/infrastucture/azure-pipelines-remove-infra.yml
+++ b/infrastucture/azure-pipelines-remove-infra.yml
@@ -13,6 +13,8 @@ variables:
 - name: RESOURCEGROUP_NAME
   value: '${{ parameters.ResourceGroupName }}'
 
+trigger: none
+
 pool:
   vmImage: ubuntu-latest
 
