--- a/full-app/src/main/resources/application.properties
+++ b/full-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.rest.base-path=/api
 
 spring.datasource.url= jdbc:mysql://contoso-pay-db-server-temp.mysql.database.azure.com:3306/contosodb?useSSL=true&serverTimezone=UTC
-spring.datasource.username= sqladmin@contoso-pay-db-server
+spring.datasource.username= sqladmin@contoso-pay-db-server-temp
 spring.datasource.password= Password1234!
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
