remove trigger from pipeline

--- a/infrastucture/azure-pipelines-create-infra.yml
+++ b/infrastucture/azure-pipelines-create-infra.yml
@@ -31,14 +31,7 @@ variables:
   - southindia
   - australiaeast
 
-trigger:
-  branches:
-    include:
-    - main
-  paths:
-    include:
-    - infrastucture/*
-    - azure-pipelines-infra.yml
+trigger: none
 
 pool:
   vmImage: windows-latest
