--- a/backend/azure-pipelines-backend.yml
+++ b/backend/azure-pipelines-backend.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 
 variables:
-  SERVICE_CONNECTION: lakpriyagk-docker-hub-service-connection
+  SERVICE_CONNECTION: $(ARM_SERVICE_CONNECTION)
 
 trigger:
   branches:
